@@ -2,7 +2,7 @@
 
 
 Title:
- Database Application 
+ Database Application (Currently connected to a live database)  :exclamation: 
 
 Purpose:
 The main goal of the scheduling application is to let the user store appointments in the most efficient way possible while making it easy to understand for the user. This program connects to an Oracle database that will verify the password on the login screen; also store any changes made in the program. Implementing localization and date/time APIs in the program will automatically update the time to the user's localization. This application was created with Scene Builder for the graphical user interface and coded in NetBeans IDE. The database was modified using MySQL workbench.
@@ -22,98 +22,58 @@ Author:
 Contact Information: 
  
  GianBustos04@gmail.com
+ <br>
+ <br>
 
 ## :warning:	 New Version :warning:	
+* Added Maven now for easier execution or feel free to execute the jar file inside the target folder:  <br>
+("\target\scheduling-1.0-SNAPSHOT-shaded.jar") :exclamation:
+  
+IDE Version: Visual Studio code <br>
+Version: 1.71.0 (user setup) <br>
+Node.js: 16.14.2 <br>
+V8: 10.2.154.15-electron.0 <br>
+OS: Windows_NT x64 10.0.22000 <br>
+MySQL Connector Driver: mysql-connector-java-8.0.22 <br>
+Javafx: javafx-sdk-18.0.2 <br>
+JDK: JDK 11 openjdk-11.0.16.1 <br>
 
-* The university no longer granted me access to the original database :exclamation:
-* I created my own relational database for this application :exclamation:
-
-Database: 
-
- FreeSQLDatabase.com
-
-IDE Version: 
- Visual Studio code
- Version: 1.71.0 (user setup)
- Node.js: 16.14.2
- V8: 10.2.154.15-electron.0
- OS: Windows_NT x64 10.0.22000
-
-
-MySQL Connector Driver:
-
- mysql-connector-java-8.0.22
-
-Javafx:
-
- javafx-sdk-18.0.2
-
-JDK:
-
- JDK 11 openjdk-11.0.16.1
-
- ## Clone this project 
-
- git clone git@github.com:GKARLOZ/Scheduling-Desktop-Application-WGU-SoftwareDevTwon.git
-
-
- ## Java in VSCODE 
-
- Install Java for vs code if you don't already have it. 
- Use this link: https://code.visualstudio.com/docs/languages/java
+<br>
+<br>
 
  ## :radioactive:	 Important Dependencies! :radioactive:	
-
- In order to run this program in VS Code, you need to have JavaFX installed.
+ In order to run the jar file, installed JRE 11 or later.  <br>
+  Install Java for vs code if you don't already have it. 
+ Use this link: https://code.visualstudio.com/docs/languages/java
+ <br>
+ <br>
  
- You could find your JAVAFX version in this link: https://gluonhq.com/products/javafx/
+ ## 1. Clone this project 
+ git clone git@github.com:GKARLOZ/Scheduling-Desktop-Application-WGU-SoftwareDevTwon.git 
  
- JavaFX jars need to be added in the Java Projects/Referenced Libraries folder to run this program. 
-
- Once you installed JAVAFX, copy the path of the lib folder (from the JAVAFX that was installed). It should look something like this -->  C:/JavaOne/javafx-sdk-18.0.2/lib
-
- open the .vscode/lauch.json file and replace the current path with your own path.  It should look something like this -->  "vmArgs": "--module-path C:/JavaOne/javafx-sdk-18.0.2/lib --add-modules javafx.controls,javafx.fxml",
-
-
- ## 	:rocket: Lets GO! :flying_saucer:	
-
- Now open the src/Model/DatabaseApp.java file  
+ <br>
+ <br>
+ 
+ ## 2. Lets GO! :flying_saucer:		:rocket: 
+ Open this project with VSCode
+ Now open the src\main\java\com\giancodes\Main.java file 
  Click run on top of the main method 
     
      Run | Debug
      public static void main(String[] args) {
+   
+Or go to the root directory for this project and run: 
+
+     mvn clean install
+     java -jar target/scheduling-1.0-SNAPSHOT-shaded.jar
+
+ <br>
+ <br>
      
-## :ninja: Login info
+## 3. Login info :ninja:
  
   * User: test
   * Password: test
   
  ![scheduling-login-img](https://user-images.githubusercontent.com/20764455/188293766-6e4ac59f-f2f3-4578-a2d1-14bbedb0ccd5.png)
 
-
-
-
-## VS CODE GUIDELINES 
-
-Here is a guideline to help you get started to write Java code in Visual Studio Code.
-
-### Folder Structure
-
-The workspace contains two folders by default, where:
-
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
-
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
-
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-### Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
-
-
-
- 
- 
- 
